kubernetes/mysql/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: gestion-produits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
          # K8s attend que MySQL soit prêt avant de router du trafic
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 30
            periodSeconds: 15
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data-pvc
        - name: init-sql
          configMap:
            name: db-init-sql
